# breeze-view-backend

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  endpoints.py
app/core/ml/: lstm_forecaster_best.pt  model.py
app/models/: requests.py  responses.py
