[project]
name = "breeze-view-backend"
version = "0.1.0"
description = "NASA Challenge 2025 backend"
authors = [
    {name = "Patricio Requena",email = "rprequenac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "google-cloud-aiplatform (>=1.119.0,<2.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "google-cloud-storage (>=2.18.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "torch (>=2.0.0,<3.0.0)"
]


[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
